--- a/horo.css
+++ b/horo.css
@@ -7,7 +7,7 @@ body{
     text-align: right;
     font-family: Georgia, 'Times New Roman', Times, serif;
     /* background: #fff; */
-    background-image: linear-gradient(rgba(247, 247, 249, 0.7),rgba(0,0,0,0.7)),url("12horo.jpg");
+    background-image: linear-gradient(rgba(0,0,0,0.7 ),rgba(0,0,0,0.7)),url("12horo.jpg");
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
@@ -18,7 +18,7 @@ body{
     width: 100%;
     position: fixed;
     z-index: 10;
-    background-color: #000; 
+    background-color: #858484; 
     top:0;
     display: flex;
     align-items:center;
@@ -29,19 +29,19 @@ body{
 .header .logo{
     font-size:2rem;
     text-decoration: none;
-    color: #fff;
+    color: #000;
     
 
 }
 .header .list .navlink{ 
-    color:#fff;
+    color:#000;
     text-decoration: none;
     font-size:1.5rem;
     margin-left:2.5rem;
 }
 .list .navlink:hover{
     text-decoration:underline ;
-    color: rgb(215, 110, 233);
+    color: rgb(65, 20, 72);
 }
 .header .bar-btn{
     display: none;
@@ -51,7 +51,7 @@ body{
     width:25px;
     height: 3px;
     margin: 5px auto;
-    background-color: #fff;
+    background-color: #000;
 }
 .horo{
     display: flex;
@@ -60,9 +60,9 @@ body{
     flex-direction: column;
     flex-wrap: wrap;
     background-color: rgb(20, 18, 54);
-    border:5px solid rgb(247, 241, 241);
+    border:3px solid rgb(20, 19, 19);
     border-radius: 25px;
-    box-shadow: 0 0 20px rgb(14, 13, 13);
+    box-shadow: 0 0 10px rgb(236, 231, 231);
     margin: 100px;
     margin-left:250px;
     margin-right:250px;
@@ -71,12 +71,13 @@ body{
     
 }
 .horo img{
+
     /* margin-top: 50px; */
-    border: 2px solid white;
+    border: 2px solid black;
     width:100%;
-    height:350px;
-    border-top-left-radius: 24px;
-    border-top-right-radius:24px;
+    height:320px;
+    border-top-left-radius: 25px;
+    border-top-right-radius:25px;
     
 }
 .horo .con{
@@ -105,6 +106,8 @@ body{
     .header{
         padding: 0 15px;
     } 
+    .horo{
+        margin-bottom:30px;} 
 }
 @media screen and (max-width:1025px) {
     .header{
@@ -118,6 +121,11 @@ body{
     }
     li a{
         font-size: 1.2rem;
+    }
+    .horo{
+        margin-bottom:50px; 
+        margin-left:130px;
+        margin-right:130px;
     }
 }
 @media screen and (max-width:913px){
@@ -146,7 +154,7 @@ body{
        left:-110%;
        width:100%;
        height:23rem;
-       background-color: gray;
+       background-color:rgb(248, 243, 243);
        transition: .5s ease;
     }
     .list .navlink{
@@ -161,4 +169,83 @@ body{
     .list.act{
         left: 0;
     }
+    .horo{
+        margin-bottom:30px;
+        margin-left: 130px;
+        margin-right:130px;
+    }
 }
+@media screen and (max-width:821px){
+    .horo{
+        margin-bottom:50px;
+        margin-left: 100px;
+        margin-right:100px;
+       
+    }}
+@media screen and (max-width:541px){
+    .horo{
+        margin-left: 50px;
+        margin-right:50px;
+    }
+    .horo img{
+        height:220px;
+    }
+}
+@media screen and (max-width:431px){
+        .horo{
+            margin-left: 60px;
+            margin-right:60px;
+        }
+        .horo img{
+            height:180px;
+    }
+    .horo p{
+        font-size: 0.9rem;
+    }
+}
+@media screen and (max-width:415px){
+            .horo{
+                margin-left: 50px;
+                margin-right:50px;
+            }
+            .horo img{
+                height: 250px;
+            }
+}
+@media screen and (max-width:391px){
+                .horo{
+                    margin-left: 40px;
+                    margin-right:40px;
+                }
+                .horo img{
+                    height: 220px;
+                }
+}
+@media screen and (max-width:376px){
+    .horo{
+         margin-left: 30px;
+        margin-right:30px;
+                    }
+                    .horo img{
+                        height: 160px;}
+                        .horo p{
+                            font-size: 0.75rem;
+                        }
+}
+@media screen and (max-width:361px){
+                        .horo{
+                            margin-left: 20px;
+                            margin-right:20px;
+                        }
+                        
+}
+                        @media screen and (max-width:281px){
+                            .horo{
+                                margin-left: 17px;
+                                margin-right:17px;
+                               
+                            }      
+                            .horo p{
+                                font-size: 0.7rem;
+                            }   
+                        }                        
