--- a/cd.css
+++ b/cd.css
@@ -591,18 +591,8 @@ font-family: 'Young Serif', serif;
     }
 }
 @media screen and (max-width:1025px) {
-    .header{
-        padding: 5px 5px;
-   
-        display: flex;
-        align-items: flex-end;
-        justify-content: space-between;
-        gap:40px;
-    }
-    .list .navlink{
-        font-size: 1.2rem;
-        padding-top:3px;
-    }
+     .header{
+        padding: 0 20px;}
     .home{
         margin-top: 20px;
     }
@@ -660,6 +650,45 @@ font-family: 'Young Serif', serif;
         width:380px;
         height:350px;
     }
+}
+@media screen and (min-width:1024px){
+    .header{
+        padding: 7.5px;
+    }
+    .header .list .navlink{
+        font-size: 0.7rem;
+        padding:0;
+    }
+    .home{
+        height: 50vh;
+    }
+    .home h2{
+        margin-top: 210px;
+        margin-right: 75px;
+        font-size:4.8rem;
+    }
+    .home h1{
+        font-size:4.9rem;
+        margin-right:-70px;
+    }
+    .home span{
+        font-size:2rem;
+        margin-right:60px;
+    }
+    .home h3{
+        margin-right:-15px;
+        font-size: 1.5rem;
+    }
+    
+    .prediction .img img{
+        margin:60px;
+        width: 200px;
+        height:200px;
+    }
+    .video{
+        height:33vh;
+    }
+    
 }
 @media screen and (max-width:913px){
     .header{
